# CR_model

PCC2/: data3.txt  fig1-1.fig  fig1-2.fig  fig1-3.fig  fig4.eps  main.m  main_FK.m  main_IK.m  main_paper.m  main_paper_FK.m  main_workspace.m  parameter_analysis.txt  test.m  workspace_demo.fig
PCC2/Parameter/: parameter.m  parameter_paper.m
PCC2/Visulization/: axes_setting.m  fig_setting.m  generate_gif.m  label_setting.m  line_IK_setting.m  line_setting.m  myWaitBar.m  plot_with_gif.m  plot_without_gif.m  title_setting.m
PCC3/: cylinder_joint_simple_asm1.slxc  cylinder_joint_simple_asm_o2.slx.autosave  main.m  test_circle_center.m  test_main.m
PCC3/Test/: parameters.m  test_Taylor_max_error.m  test_angle2rope_error_graph.m  test_angle2rope_error_graph_ddof.fig  test_angle2rope_error_graph_sdof.fig  test_central_point_line_graph.m  test_circle_generate.m  test_rope2angle_error_graph.m  test_rope2angle_error_graph_ddof.fig  test_rope2angle_error_graph_sdof.fig  test_sim_circlular.m  test_workspace.m
PCC3/simulink/cylinder_joint_3_pairs_asm_urdf1/cylinder_joint_3_pairs_asm.SLDASM/: CMakeLists.txt  package.xml
PCC3/simulink/cylinder_joint_3_pairs_asm_urdf1/cylinder_joint_3_pairs_asm.SLDASM/launch/: display.launch  gazebo.launch
PCC3/simulink/cylinder_joint_3_pairs_asm_urdf1/cylinder_joint_3_pairs_asm.SLDASM/meshes/: link1.STL  link2.STL  link4.STL  link6.STL  linkEnd.STL
PCC3/simulink/cylinder_joint_3_pairs_asm_urdf1/cylinder_joint_3_pairs_asm.SLDASM/urdf/: cylinder_joint_3_pairs_asm.SLDASM.csv  cylinder_joint_3_pairs_asm.SLDASM.urdf
(+156 files in other folders)
