<package format="2">
  <name>cylinder_joint_3_pairs_asm.SLDASM</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for cylinder_joint_3_pairs_asm.SLDASM</p>
    <p>This package contains configuration data, 3D models and launch files
for cylinder_joint_3_pairs_asm.SLDASM robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo</depend>
  <export>
    <architecture_independent />
  </export>
</package>